deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: oneview-2-acm-assets
  namespace: open-cluster-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oneview-2-acm-assets
  template:
    metadata:
      labels:
        app: oneview-2-acm-assets
    spec:
      containers:
        - name: cli
          image: 'quay.io/bitnami/kubectl:1.21'
          command:
            - bash
            - '-c'
            - >-
              while [[ 1 ]]; 
              do /bin/rm -rf old; mkdir old; 
              for file in `ls -1 assets`; do mv assets/$file old; done;
              curl http://localhost:8080/assets.js; 
              for file in `ls -1 assets`; do kubectl apply -f assets/$file; done;
              for file in `ls -1 old`; do if [[ -f assets/$file ]]; then kubectl delete -f old/$file; fi; done;
              sleep 300; 
              done
          volumeMounts:
            - name: assets
              mountPath: assets              
        - name: server
          command:
            - python3
            - server.py
            - '8080'            
          ports:
            - containerPort: 8080
              protocol: TCP
          image: 'quay.io/fdavalo/oneview-2-acm-assets:latest'
          volumeMounts:
            - name: assets
              mountPath: /opt/app-root/src/assets          
      serviceAccount: multicluster-operators
      volumes:
        - name: assets
          emptyDir: {}
